# hugs_and_cakes

./: .gitignore  Dockerfile  Makefile  deploy.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  test
.github/workflows/: deploy.yml
account/: admin.py  constants.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_user_created_by_alter_user_updated_by.py  0003_alter_user_created_at.py
account/services/: auth_service.py  user_service.py
base/: admin.py  models.py  tasks.py  views.py
base/migrations/: 0001_initial.py  0002_delete_apirequestlogger.py
base/templatetags/: currency_filter.py
cart/: context_processors.py  services.py  urls.py  views.py
core/: celery.py  scheduler.py  settings.py  urls.py
crm/: admin.py  context_processors.py  models.py  urls.py  views.py
crm/migrations/: 0001_initial.py  0002_alter_category_options_alter_category_code.py  0003_alter_menuitem_slug.py  0004_rename_menu_items_menuitem_image.py  0005_remove_category_images_category_cover_image.py  0006_menuitem_percentage_discount.py  0007_rename_base_price_menuitem_price.py  0008_alter_addon_created_at_alter_category_created_at_and_more.py
crm/services/: category_service.py  table_service.py  (+1 more)
nginx/: default.conf
order/: admin.py  constants.py  models.py  urls.py  views.py
templates/: about-us.html  cart.html  category.html  checkout.html  contact-us.html  error-404.html  error-500.html  forgot-password.html  index.html  login.html  menu.html  order-success.html  signup.html  verify-otp.html
utils/: models.py  util.py
(+20 files in other folders)
