[project]
name = "food-delivery"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "celery>=5.6.2",
    "cloudinary>=1.44.1",
    "dj-database-url>=3.1.0",
    "django>=6.0.2",
    "django-disposable-email-checker>=2.0.4",
    "django-qrcode>=0.3",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "email-validator>=2.3.0",
    "gunicorn>=25.3.0",
    "password-validator>=1.0",
    "phonenumbers>=9.0.23",
    "python-dotenv>=1.2.1",
    "qrcode[pil]>=8.2",
    "whitenoise>=6.11.0",
]
